--- a/public/templates/info/info-jdul-de.html
+++ b/public/templates/info/info-jdul-de.html
@@ -1,4 +1,5 @@
 <div class="container">
+<img src="./../../../assets/jdul_ente.jpg" style="height:320px;float:left;margin-right:15px" />
 <h2>Sommerferienprogramme für Kindergartenkinder und Grundsch&uuml;lerInnen</h2>
 <h4 class="brand-orange">DAS PROGRAMM:</h4>
 <p>
