--- a/public/templates/info/info-kiso-de.html
+++ b/public/templates/info/info-kiso-de.html
@@ -1,10 +1,12 @@
 <div class='container'>
-	<h2><strong>KiSo – Kindersommer 2017</strong></h2>
-	<img src="./../../../assets/KiSo2017-folderweb1.png" style="height:320px;float:left;margin-right:15px" />
-	<p>Für Grundschulkinder aller Muttersprachen.<br />Das Programm wird in deutscher Sprache angeboten, somit werden genügend Grundkenntnisse der deutschen Sprache vorausgesetzt.</p>
+	<h2><strong>KiSo – Kindersommer 2018</strong></h2>
+	<img src="./../../../../assets/KiSo2017-folderweb1.png" style="height:320px;float:left;margin-right:15px" />
+	<p>Für Grundschulkinder aller Muttersprachen.<br />Das Programm wird in deutscher Sprache
+		angeboten, somit werden genügend Grundkenntnisse der deutschen Sprache vorausgesetzt. Der KiSo ist kein Sprachkurs.</p>
 	<p>Maximal 45 Kinder pro Woche</p>
-	<p><strong><time>19. Juni - 14. Juli 2017</time></strong> (Neu: Eine Woche länger)<br />Zentrum Maria Heim, Neustifter Weg 5</p>
-	<p><strong><time>17. Juli - 04. August 2017</time></strong><br />Münzbank Gries, Freiheitsstraße 93</p>
+	<h4>Wo</h4>
+	<p><strong><time>18. Juni - 03. August 2017</time></strong><br />Zentrum Maria Heim, Neustifter Weg 5<br>Neu: Aufgrund der Umbauarbeiten der Münzbank in Gries werden heuer alle 7 Wochen im Zentrum Maria Heim stattfinden!</p>
+	<h4>Wann</h4>
 	<p>Von Montag bis Freitag von 8.30 bis 15.00 Uhr<br />Zwischen 7.45 und 8.30 Uhr können die Eltern ihre Kinder bringen; Abholzeit 15.00 – 15.30 Uhr</p>
 	<h4>Kosten:</h4>
 	<p>80 € pro Kind & Woche<br />für Geschwisterkinder 70 € pro Woche<br />im Preis inbegriffen: Kinderbetreuung, Mittagessen, Jause, T-Shirt</p>
@@ -14,14 +16,14 @@
 	<h4>BetreuerInnen-Team:</h4>
 	<p>Die Sozialpädagogin Nadia Vicari wird das Projekt leiten. Sie wird zusammen mit einem sieben- bis neunköpfigen Team Bozner JungscharleiterInnen (16 - 26 Jahre) die Kinder betreuen.</p>
 	<h4>Anmeldung:</h4>
-	<p>Die Online-Anmeldung findet ab Dienstag, <strong><time>14. März 2017 ab 19.00 Uhr</time></strong> unter <strong><a href="www.kiso.bz.it">www.kiso.bz.it</a></strong> statt. Wichtig: Alle Eltern müssen einen Account mit Username und Passwort auf selbiger Internetseite erstellen. Der Account kann ab 9. März 2017 angelegt werden und ist für weitere Jahre wieder verwendbar.<br />Für Fragen: <a href="mailto:kiso@jd.bz.it">kiso@jd.bz.it</a>, <a href="tel:0471 972098">0471 972098</a> (nachmittags)</p>
+	<p>Die Online-Anmeldung findet ab Donnerstag, <strong><time>15. März 2018 ab 19.00 Uhr</time></strong> unter <strong><a href="www.kiso.bz.it">www.kiso.bz.it</a></strong> statt. Wichtig: Alle Eltern müssen einen Account mit Username und Passwort auf selbiger Internetseite erstellen. Der Account kann ab 9. März 2017 angelegt werden und ist für weitere Jahre wieder verwendbar.<br />Für Fragen: <a href="mailto:kiso@jd.bz.it">kiso@jd.bz.it</a>, <a href="tel:0471 972098">0471 972098</a> (nachmittags)</p>
 	<h4>Wichtig:</h4>
 	<p>Alle Eltern und Erziehungsberechtigten dürfen nur die eigenen Kinder einschreiben</p>
 	<p>Das Kind muss bereits die erste Klasse Grundschule besucht haben (Ausnahme: Geschwisterkinder, die das letzte Kindergartenjahr besucht haben)<br />Die Anmeldung ist verbindlich, wenn Sie die schriftliche Bestätigung des Jugenddienstes Bozen erhalten haben</p>
 	<adress style="font-style:italic"><mark>Jugenddienst Bozen</mark><br />Pfarrplatz 24, piazza Parrocchia<br />39100 Bozen/Bolzano<br />0471 972098 (15.00-18.30 h)<br /><a href="mailto:kiso@jd.bz.it">kiso@jd.bz.it</a></adress><br />
-	<img src="./../../../assets/jd-bz.png" style="vertical-align:bottom;height:110px;margin-left:15px" />
-	<img src="./../../../assets/logo-jungschar.png" style="vertical-align:bottom;height:50px;margin-left:15px" />
-	<img src="./../../../assets/raika.png" style="vertical-align:bottom;height:70px;margin-left:15px" />
-	<img src="./../../../assets/familienagentur.png" style="vertical-align:bottom;height:150px;margin-left:15px" />
-	<img src="./../../../assets/stadt_bozen.jpg" style="vertical-align:bottom;height:70px;margin-left:15px; margin-bottom:30px" />
+	<img src="./../../../../assets/jd-bz.png" style="vertical-align:bottom;height:110px;margin-left:15px" />
+	<img src="./../../../../assets/logo-jungschar.png" style="vertical-align:bottom;height:50px;margin-left:15px" />
+	<img src="./../../../../assets/raika.png" style="vertical-align:bottom;height:70px;margin-left:15px" />
+	<img src="./../../../../assets/familienagentur.png" style="vertical-align:bottom;height:150px;margin-left:15px" />
+	<img src="./../../../../assets/stadt_bozen.jpg" style="vertical-align:bottom;height:70px;margin-left:15px; margin-bottom:30px" />
 </div>
