--- a/public/templates/registration/registration.html
+++ b/public/templates/registration/registration.html
@@ -256,7 +256,7 @@
 									<h4 class="modal-title">Information</h4>
 								</div>
     							<div class="modal-content">
-									<div ng-include src='"templates/agbEdit.html"'></div>
+									<div ng-include src='"templates/agb/agb.html"'></div>
 								</div>
 								<div class="modal-footer">
 									<button type="button" class="close btn btn-warning" data-dismiss="modal" aria-label="Close">Zur&uuml;ck</button>
