--- a/public/css/app.css
+++ b/public/css/app.css
@@ -41,6 +41,21 @@
     color: white;
     border-right:3px solid orange;
     border-bottom:3px solid orange;
+    border-radius: 10px;
+}
+
+.card-grey {
+    width:250px;
+    max-height: 200px;
+    float:left;
+    margin-right:10px;
+    margin-top:10px;
+    padding: 15px;
+    background-color: #6a6a6a;
+    color: orange;
+    border-right:3px solid orange;
+    border-bottom:3px solid orange;
+    border-radius: 10px;
 }
 
 .navbar-brand {
