--- a/public/templates/info/info-jdul-it.html
+++ b/public/templates/info/info-jdul-it.html
@@ -1,4 +1,5 @@
 <div class="container">
+<img src="./../../../assets/jdul_ente.jpg" style="height:320px;float:left;margin-right:15px" />
 <h2>Programma vacanze estive per bambini della scuola materna e la  scuola elementare</h2>
 <h4 class="brand-orange">IL PROGRAMMA:</h4>
 <p>
