--- a/public/templates/info/info.html
+++ b/public/templates/info/info.html
@@ -1,4 +1,4 @@
-<div ng-show="platform.isJDBL()"><div ng-include src="'templates/info/info-jdbl.html'"></div></div>
+<div ng-show="platform.isJDBL() || platform.isJugendsommer()"><div ng-include src="'templates/info/info-jdbl.html'"></div></div>
 
 <div ng-show="platform.isKiso() && lang == 'de'"><div ng-include src="'templates/info/info-kiso-de.html'"></div></div>
 <div ng-show="platform.isKiso() && lang == 'it'"><div ng-include src="'templates/info/info-kiso-it.html'"></div></div>
@@ -6,5 +6,5 @@
 <div ng-show="platform.isJDUL() && lang == 'de'"><div ng-include src="'templates/info/info-jdul-de.html'"></div></div>
 <div ng-show="platform.isJDUL() && lang == 'it'"><div ng-include src="'templates/info/info-jdul-it.html'"></div></div>
 
-<div ng-show="platform.isTest() && lang == 'de'"></div><div ng-include src="'templates/info/info-jdul-de.html'"></div></div>
+<div ng-show="platform.isTest() && lang == 'de'"><div ng-include src="'templates/info/info-jdul-de.html'"></div></div>
 <div ng-show="platform.isTest() && lang == 'it'"><div ng-include src="'templates/info/info-jdul-it.html'"></div></div>
