--- a/public/templates/selection.html
+++ b/public/templates/selection.html
@@ -7,14 +7,22 @@
         <a class='btn btn-success btn-block' href='/#/newEvent' role='button'>Neu</a>
     </div>
 </div>
-<div ng-show="isKiso">
+<div ng-show="platform.isKiso()">
     <!--<h4><span ng-show="lang == 'de'" class="label label-default">Anmeldestart: Dienstag, 14. März, 19.00 Uhr! Legen Sie sich inzwischen einen User an.</span></h4>
     <h4><span ng-show="lang == 'it'" class="label label-default">Partenza iscrizioni: martedí 14 marzo, ore 19.00! Nel frattempo puó crearsi un utente.</span></h4>-->
     <h4><span class="label label-info"><a href="#/agb/1">{{ 'SELECTION.INFO' | translate }}</a></span></h4>
 </div>
+<div ng-show="platform.isJDUL()">
+    <div class="row">
+        <div class="col-sm-3">
+        <h2><span ng-show="lang == 'de'" class="label label-info">Anmeldestart: Montag 19. Februar!</span></h2>
+        <h2><span ng-show="lang == 'it'" class="label label-info">Partenza iscrizioni: 19 febbraio!</span></h2>
+        </div>
+    </div>
+</div>
 
 <div ng-repeat='loc in locations'>
-    <div class='card-orange'>
+    <div ng-class='{"card-grey": platform.isJDUL(), "card-orange": !platform.isJDUL()}'>
         <a class='invisible-link' href='#/events/{{encodeFullURI(loc._id)}}'>
         <div class='panel-header'>
                 <h3 ng-show="lang == 'de'"><strong>{{loc.name}}</strong></h3>
