--- a/public/templates/report.html
+++ b/public/templates/report.html
@@ -87,7 +87,7 @@
 			<th>Woche</th>
 			<th>Vorname</th>
 			<th>Nachname</th>
-			<th>FrühBetreuung</th>
+			<th>EbK</th>
 			<th>Einzahlung</th>
 			<th>Benachrichtigt</th>
 			<th>Geburtstag</th>
@@ -104,6 +104,8 @@
 			<th>Kontak2</th>
 			<th>Tel. Kontakt2</th>
 			<th>T-Shirt</th>
+			<th>Beeinträchtigung</th>
+			<th>Diagnose</th>
 			<th>Anmeldedatum</th>
 		</tr>
 		<tr ng-repeat='reg in registrations | orderBy:[colNameSort,colNameSort2]'>
@@ -114,7 +116,7 @@
 			<td>{{reg.activityId.name}}</td>
 			<td>{{reg.firstNameChild}}</td>
 			<td>{{reg.lastNameChild}}</td>
-			<td>{{formatBool(reg.needsPreCare)}}</td>
+			<td>{{formatBool(reg.needsEbK)}}</td>
 			<td ng-class='{"bg-success": reg.isPaymentDone, "bg-danger": !reg.isPaymentDone}'><input type='checkbox' ng-model='reg.isPaymentDone' ng-change='updateIsPaymentDone(reg._id, reg.isPaymentDone)' style='margin-right:8px' />{{formatBool(reg.isPaymentDone)}}</td>
 			<td ng-class='{"bg-success": reg.isEmailNotified, "bg-danger": !reg.isEmailNotified}'><input type='checkbox' ng-model='reg.isEmailNotified' ng-change='updateIsEmailNotified(reg._id, reg.isEmailNotified)' style='margin-right:8px' />{{formatBool(reg.isEmailNotified)}}</td>
 			<td>{{reg.birthdayChild | date: 'dd/MM/yyyy'}}</td>
@@ -131,6 +133,8 @@
 			<td>{{reg.nameContact2}}</td>
 			<td>{{reg.telContact2}}</td>
 			<td>{{reg.tShirtSize}}</td>
+			<td>{{formatBool(reg.hasDisability)}}</td>
+			<td>{{reg.disabilityDescription}}</td>
 			<td>{{reg.registrationDate | date: 'dd/MM/yyyy : hh.mm.ss'}}</td>
 		</tr>
 	</table>
