--- a/public/templates/activityEdit.html
+++ b/public/templates/activityEdit.html
@@ -28,16 +28,19 @@
 	<div class='form-group' ng-class='{ "has-error": activityForm.startDate.$invalid }'>
 		<label for='startDate' class='control-label col-sm-2'>Beginnt am</label>
 		<div class='col-sm-10'>
-		<p class='input-group'>
+		<p class='input-group' ng-show='!platform.isJDUL()'>
 			<ng-datepicker ng-model='startDate' view-format="DD.MM.YYYY"  locale='de' required></ng-datepicker>
 		</p>
+		<input ng-show='platform.isJDUL()' id='startDate' type="date" ng-model='startDate' class='form-control' required></input>
 		</div>
 	</div>
 	<div class='form-group' ng-class='{ "has-error": activityForm.endDate.$invalid }'>
 		<label for='endDate' class='control-label col-sm-2'>Endet am</label>
 		<div class='col-sm-10'>
-		<p class='input-group'>
+		<p class='input-group' ng-show='!platform.isJDUL()'>
 			<ng-datepicker ng-model='endDate' view-format="DD.MM.YYYY"  locale='de' required></ng-datepicker>
+		</p>
+		<input ng-show='platform.isJDUL()' id='endDate' type="date" ng-model='endDate' class='form-control' required></input>
 		</div>
 	</div>
 	<div class='form-group' ng-class='{ "has-error": activityForm.maxParticipants.$invalid }'>
