--- a/public/templates/registration/registration.html
+++ b/public/templates/registration/registration.html
@@ -248,31 +248,32 @@
 						<input type='checkbox' name='agb' ng-model='acceptAGB'><strong>{{"RESERVATION.LABEL_TERMS1" | translate}}<button type="button" class="btn btn-default" data-toggle="modal" data-target=".bs-example-modal-lg">{{"RESERVATION.LABEL_TERMS2" | translate}}</button></strong></input>
 					</div>
 					
-					<!--<div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
+					<div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
   						<div class="modal-dialog modal-lg" role="document">
 							<div class="modal-content">
 								<div class="modal-header">
 									<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 									<h4 class="modal-title">Information</h4>
 								</div>
-    							<div class="modal-content">
-									<div ng-show="platform.isJDBL() || platform.isJugendsommer()"><div ng-include src='"templates/agb/agb-jdbl.html"'></div><div>
+    							<div class="modal-body">
+									<div ng-show="platform.isJDBL() || platform.isJugendsommer()" ng-include src='"templates/agb/agb-jdbl.html"'></div>
 
-									<div ng-show="platform.isKiso() && lang == 'de'"><div ng-include src='"templates/agb/agb-kiso-de.html"'></div></div>
-									<div ng-show="platform.isKiso() && lang == 'it'"><div ng-include src='"templates/agb/agb-kiso-it.html"'></div></div>
+									<div ng-show="platform.isKiso() && lang == 'de'" ng-include src='"templates/agb/agb-kiso-de.html"'></div>
+									<div ng-show="platform.isKiso() && lang == 'it'" ng-include src='"templates/agb/agb-kiso-it.html"'></div>
 										
-									<div ng-show="platform.isJDUL() && lang == 'de'"><div ng-include src='"templates/agb/agb-jdul-de.html"'></div></div>
-									<div ng-show="platform.isJDUL() && lang == 'it'"><div ng-include src='"templates/agb/agb-jdul-it.html"'></div></div>
+									<div ng-show="platform.isJDUL() && lang == 'de'" ng-include src='"templates/agb/agb-jdul-de.html"'></div>
+									<div ng-show="platform.isJDUL() && lang == 'it'" ng-include src='"templates/agb/agb-jdul-it.html"'></div>
 										
-									<div ng-show="platform.isTest() && lang == 'de'"><div ng-include='"templates/agb/agb-jdul-de.html"'></div></div>
-									<div ng-show="platform.isTest() && lang == 'it'"><div ng-include='"templates/agb/agb-jdul-it.html"'></div></div>
+									<div ng-show="platform.isTest() && lang == 'de'" ng-include src='"templates/agb/agb-jdul-de.html"'></div>
+									<div ng-show="platform.isTest() && lang == 'it'" ng-include src='"templates/agb/agb-jdul-it.html"'></div>
 								</div>
 								<div class="modal-footer">
 									<button type="button" class="close btn btn-warning" data-dismiss="modal" aria-label="Close">Zur&uuml;ck</button>
 								</div>
 							</div>
   						</div>
-					</div>-->
+					</div>
+
 					<br />
 					<p class="bg-info" style='padding: 10px'>{{"RESERVATION.LABEL_REGISTRATION_PAY_INFO" | translate}}</p>
 							
