--- a/public/templates/selection.html
+++ b/public/templates/selection.html
@@ -22,7 +22,7 @@
 </div>
 
 <div ng-repeat='loc in locations'>
-    <div ng-class='{"card-grey": platform.isJDUL(), "card-orange": !platform.isJDUL()}'>
+    <div class='card-orange'>
         <a class='invisible-link' href='#/events/{{encodeFullURI(loc._id)}}'>
         <div class='panel-header'>
                 <h3 ng-show="lang == 'de'"><strong>{{loc.name}}</strong></h3>
