--- a/public/templates/info/info-jdul-it.html
+++ b/public/templates/info/info-jdul-it.html
@@ -1,6 +1,8 @@
 <div class="container">
-<img src="./../../../assets/jdul_ente.jpg" style="height:320px;float:left;margin-right:15px" />
-<h2>Programma vacanze estive per bambini della scuola materna e la  scuola elementare</h2>
+<img src="./../../../assets/jdul_ente.jpg" style="height:320px;float:left;margin-right:15px" /><br />
+<p>Programma vacanze estive per bambini della scuola materna, bambini della scuola elementare e ragazzi deall scuola media nella Bassa Atesina</p>
+<p>Ulteriori informazioni trovate nel  <a href="https://www.jugenddienstunterland.it/app/download/7297361561/JDSUMMER+2018.pdf?t=1518711066">opuscolo</a> oppure sooto <a href="https://www.jugenddienst.it/unterland">www.jugenddienst.it/unterland</a></p>
+<!-- <h2>Programma vacanze estive per bambini della scuola materna e la  scuola elementare</h2>
 <h4 class="brand-orange">IL PROGRAMMA:</h4>
 <p>
 Durante i programmi, i bambini saranno accompagnati da persone con esperienze e
@@ -17,5 +19,5 @@ Lo scopo di questa settimana sarà quello di provare nuove cose, di allargare il
 orizzonte e di assistere i ragazzi nello rafforzamento della competenza sociale. Cerchiamo
 di acconsentire agli interessi dei ragazzi e di organizzare delle settimane divertenti. Oltre
 alle attività al luogo, ci sono previste giornate nelle piscine e varie gite.
-</p>
+</p> -->
 </div>
