--- a/public/templates/info/info-jdul-de.html
+++ b/public/templates/info/info-jdul-de.html
@@ -1,6 +1,8 @@
 <div class="container">
-<img src="./../../../assets/jdul_ente.jpg" style="height:320px;float:left;margin-right:15px" />
-<h2>Sommerferienprogramme für Kindergartenkinder und Grundsch&uuml;lerInnen</h2>
+<img src="./../../../assets/jdul_ente.jpg" style="height:320px;float:left;margin-right:15px" /><br >
+<p>Sommerferienprogramme für Kindergartenkinder, Grundschulkinder und Mittelschülerinnen im Unterland</p>
+<p>Nähere Infos finden Sie in der folgenden <a href="https://www.jugenddienstunterland.it/app/download/7297361561/JDSUMMER+2018.pdf?t=1518711066">Broschüre</a> oder unter <a href="https://www.jugenddienst.it/unterland">www.jugenddienst.it/unterland</a></p>
+<!--<h2>Sommerferienprogramme für Kindergartenkinder und Grundsch&uuml;lerInnen</h2>
 <h4 class="brand-orange">DAS PROGRAMM:</h4>
 <p>
 Die Kinder im Kindergarten- und Grundschulalter werden von pädagogisch ausgebildeten
@@ -19,7 +21,7 @@ Jugendlichen in der Stärkung ihrer Sozialkompetenzen zu fördern. Wir versuchen
 Wünsche und Interessen der Jugendlichen einzugehen und gemeinsam spannende Wochen
 zu verbringen. Neben den Aktivitäten vor Ort, werden Schwimmbadbesuche und Ausflüge auf
 dem Programm stehen.
-</p>
+</p>-->
 </div>
 
 
