style info jdul

--- a/public/templates/info/info-jdul-de.html
+++ b/public/templates/info/info-jdul-de.html
@@ -1,5 +1,5 @@
 <div class="container">
-<img src="./../../../assets/jdul_ente.jpg" style="height:320px;float:left;margin-right:15px" /><br >
+<img src="./../../../assets/jdul_ente.jpg" style="height:320px;margin-right:15px" /><br >
 <p>Sommerferienprogramme für Kindergartenkinder, Grundschulkinder und Mittelschülerinnen im Unterland</p>
 <p>Nähere Infos finden Sie in der folgenden <a href="https://www.jugenddienstunterland.it/app/download/7297361561/JDSUMMER+2018.pdf?t=1518711066">Broschüre</a> oder unter <a href="https://www.jugenddienst.it/unterland">www.jugenddienst.it/unterland</a></p>
 <!--<h2>Sommerferienprogramme für Kindergartenkinder und Grundsch&uuml;lerInnen</h2>
