--- a/public/templates/info/info-jdul-it.html
+++ b/public/templates/info/info-jdul-it.html
@@ -1,7 +1,7 @@
 <div class="container">
 <img src="./../../../assets/jdul_ente.jpg" style="height:320px;margin-right:15px" /><br />
 <p>Programma vacanze estive per bambini della scuola materna, bambini della scuola elementare e ragazzi deall scuola media nella Bassa Atesina</p>
-<p>Ulteriori informazioni trovate nel  <a href="https://www.jugenddienstunterland.it/app/download/7297361561/JDSUMMER+2018.pdf?t=1518711066">opuscolo</a> oppure sooto <a href="https://www.jugenddienst.it/unterland">www.jugenddienst.it/unterland</a></p>
+<p>Ulteriori informazioni trovate nel  <a href="https://www.jugenddienstunterland.it/app/download/7297361561/JDSUMMER+2018.pdf?t=1518711066">opuscolo</a> oppure sotto <a href="https://www.jugenddienst.it/unterland">www.jugenddienst.it/unterland</a></p>
 <!-- <h2>Programma vacanze estive per bambini della scuola materna e la  scuola elementare</h2>
 <h4 class="brand-orange">IL PROGRAMMA:</h4>
 <p>
