new duck icon jdul

--- a/public/templates/events.html
+++ b/public/templates/events.html
@@ -37,7 +37,8 @@
 					<p ng-show="lang == 'it'">{{event.description_it}}</p>
 				</div>
 				<div class='col-sm-2'>
-					<a href='/#/registration/{{event._id}}?type={{event.type}}' class='btn btn-xlarge btn-success' role='button' ng-show='iSvc.isAuthenticated() && !cannotReserve(event)'><span class='glyphicon glyphicon-user'></span></a>
+					<a href='/#/registration/{{event._id}}?type={{event.type}}' class='btn btn-xlarge btn-success' role='button' ng-show='iSvc.isAuthenticated() && !cannotReserve(event) && !platform.isJDUL()'><span class='glyphicon glyphicon-user'></span></a>
+					<a href='/#/registration/{{event._id}}?type={{event.type}}' class='btn btn-xlarge btn-success' role='button' ng-show='iSvc.isAuthenticated() && !cannotReserve(event) && platform.isJDUL()'><img <img src='../../assets/button_ente.png' style='width:45px;margin-right:10px' /></a>
 					<button type="button" class="btn btn-xlarge btn-success" ng-hide='iSvc.isAuthenticated()' data-toggle="modal" data-target="#warningModal"><span class='glyphicon glyphicon-user'></button>
 					<!--<a href='/#/activities/{{event._id}}?type={{event.type}}' class='btn btn-xlarge btn-success' role='button'><span class='glyphicon glyphicon-triangle-right'></span></a>-->
 					<a href='/#/eventInfo/{{event._id}}' class="btn btn-xlarge btn-warning" role'button'><span class='glyphicon glyphicon-search'></span></a>
