--- a/public/templates/header/brand.html
+++ b/public/templates/header/brand.html
@@ -11,7 +11,7 @@
 		</a>
 	</div>
 	<div ng-show="platformSvc.isJDUL()">
-		<a class='navbar-brand' href='https://www.jugenddienst/unterland'>
+		<a class='navbar-brand' href='https://www.jugenddienst.it/unterland'>
 			<img src='assets/jd-logo.png' alt='Jugenddienst Bozen' style='height:55px;'>
 		</a>
     </div>
