--- a/public/templates/selection.html
+++ b/public/templates/selection.html
@@ -32,7 +32,8 @@
         </div>
         <div class='panel-body'>
             <div ng-repeat='t in loc.distinctTypes'>
-                <span ng-show='t === "summer"' class='glyphicon glyphicon-certificate pull-left' style='font-size:25px;margin-right:10px'></span>
+                <span ng-show='t === "summer" && !platform.isJDUL()' class='glyphicon glyphicon-certificate pull-left' style='font-size:25px;margin-right:10px'></span>
+                <span ng-show='t === "summer" && platform.isJDUL()'><img src='../../assets/button_ente.png' class='pull-left' style='width:45px;margin-right:10px' /></span>
                 <span ng-show='t === "music"' class='glyphicon glyphicon-music pull-left' style='font-size:25px;margin-right:10px'></span>
                 <span ng-show='t === "spiritnight"' class='glyphicon glyphicon-education pull-left' style='font-size:25px;margin-right:10px'></span>
                 <span ng-show='t === "club"' class='glyphicon glyphicon-home pull-left' style='font-size:25px;margin-right:10px'></span>
