--- a/public/templates/myRegistrations.html
+++ b/public/templates/myRegistrations.html
@@ -1,7 +1,9 @@
 <div class='container'>
 	<h2 class='text-orange'></h2>
 	<h3><span class='label label-default'>{{"MYRESERVATION.TITLE" | translate}}</span></h3>
-	<div cg-Busy='{promise:busyPromise,message:"Loading",backdrop:true,minDuration:500}'>{{"MYRESERVATION.NOTE" | translate}}</div>
+	<div cg-Busy='{promise:busyPromise,message:"Loading",backdrop:true,minDuration:500}'>
+		<div ng-show='!platform.isJDUL()'>{{"MYRESERVATION.NOTE" | translate}}</div>
+	</div>
 	<table class='table table-striped table-bordered'>
 		<tr>
 			<th>{{"MYRESERVATION.LABEL_EVENT" | translate}}</th>
