bug fix wrong platform query

--- a/public/templates/registration/registration.html
+++ b/public/templates/registration/registration.html
@@ -285,7 +285,7 @@
 
 					<br />
 					<p class="bg-info" style='padding: 10px; margin-bottom: 0px;'>{{"RESERVATION.LABEL_REGISTRATION_PAY_INFO" | translate}}</p>
-					<p ng-show='platform.isTest()' class="bg-info" style="padding: 10px; margin-top: 0px;">{{"RESERVATION.LABEL_REGISTRATION_RECEIPT_INFO" | translate}}</p>
+					<p ng-show='platform.isJDUL()' class="bg-info" style="padding: 10px; margin-top: 0px;">{{"RESERVATION.LABEL_REGISTRATION_RECEIPT_INFO" | translate}}</p>
 							
 					<div class='col-sm-offset-2 col-sm-8' style='margin-top:15px;'>
 						<input class='btn btn-success bnt-lg btn-block' ng-click='save()' translate-attr="{value: 'RESERVATION.BUTTON_SUBMIT'}" ng-disabled='!isRegistrationAllowed()'>
