remove jdul registration info

--- a/public/templates/header/brand.html
+++ b/public/templates/header/brand.html
@@ -6,7 +6,7 @@
 		</a>
 	</div>
 	<div ng-show="platformSvc.isKiso()">
-		<a class='navbar-brand' href='https://www.jd.bz.it/#/'>
+		<a class='navbar-brand' href='http://www.jd.bz.it/#/'>
 			<img src='assets/jd-logo.png' alt='kiso' style='height:55px;'>
 		</a>
 	</div>
