--- a/public/templates/selection.html
+++ b/public/templates/selection.html
@@ -12,14 +12,14 @@
     <h4><span ng-show="lang == 'it'" class="label label-default">Partenza iscrizioni: 15 marzo, ore 19.00! Nel frattempo puó crearsi un utente.</span></h4>
     <h4><span class="label label-info"><a href="#/agb/1">{{ 'SELECTION.INFO' | translate }}</a></span></h4>
 </div>
-<div ng-show="platform.isJDUL()">
+<!-- <div ng-show="platform.isJDUL()">
     <div class="row">
         <div class="col-sm-3">
         <h2><span ng-show="lang == 'de'" class="label label-info">Anmeldestart: Montag 19. Februar!</span></h2>
         <h2><span ng-show="lang == 'it'" class="label label-info">Partenza iscrizioni: 19 febbraio!</span></h2>
         </div>
     </div>
-</div>
+</div> -->
 
 <div ng-repeat='loc in locations'>
     <div class='card-orange'>
