kiso layout adaptions

--- a/public/templates/selection.html
+++ b/public/templates/selection.html
@@ -8,9 +8,13 @@
     </div>
 </div>
 <div ng-show="platform.isKiso()">
-    <h4><span ng-show="lang == 'de'" class="label label-default">Anmeldestart: 15. März, 19.00 Uhr! Legen Sie sich inzwischen einen User an.</span></h4>
-    <h4><span ng-show="lang == 'it'" class="label label-default">Partenza iscrizioni: 15 marzo, ore 19.00! Nel frattempo puó crearsi un utente.</span></h4>
-    <h4><span class="label label-info"><a href="#/agb/1">{{ 'SELECTION.INFO' | translate }}</a></span></h4>
+    <div class="row">
+        <div class="col-sm-3">
+                <h2><span ng-show="lang == 'de'" class="label label-default">Anmeldestart: 15. März, 19.00 Uhr! Legen Sie sich inzwischen einen User an.</span></h2>
+                <h2><span ng-show="lang == 'it'" class="label label-default">Partenza iscrizioni: 15 marzo, ore 19.00! Nel frattempo puó crearsi un utente.</span></h2>
+        </div>
+    </div>
+    <!-- <h4><span class="label label-info"><a href="#/agb/1">{{ 'SELECTION.INFO' | translate }}</a></span></h4> -->
 </div>
 <!-- <div ng-show="platform.isJDUL()">
     <div class="row">
