--- a/public/templates/info/info-kiso-de.html
+++ b/public/templates/info/info-kiso-de.html
@@ -22,6 +22,9 @@
 	<p>Das Kind muss bereits die erste Klasse Grundschule besucht haben (Ausnahme: Geschwisterkinder, die das letzte Kindergartenjahr besucht haben)<br />Die Anmeldung ist verbindlich, wenn Sie die schriftliche Bestätigung des Jugenddienstes Bozen erhalten haben</p>
 	<adress style="font-style:italic"><mark>Jugenddienst Bozen</mark><br />Pfarrplatz 24, piazza Parrocchia<br />39100 Bozen/Bolzano<br />0471 972098 (15.00-18.30 h)<br /><a href="mailto:kiso@jd.bz.it">kiso@jd.bz.it</a></adress><br />
 	<img src="./../../../../assets/jdb.png" style="vertical-align:bottom;height:110px;margin-left:15px" />
+
+	<div ng-include="templates/agb/agb-kiso-de.html"></div>
+
 	<img src="./../../../../assets/logo-jungschar.png" style="vertical-align:bottom;height:50px;margin-left:15px" />
 	<img src="./../../../../assets/raika.png" style="vertical-align:bottom;height:70px;margin-left:15px" />
 	<img src="./../../../../assets/familienagentur.png" style="vertical-align:bottom;height:150px;margin-left:15px" />
