--- a/public/templates/events.html
+++ b/public/templates/events.html
@@ -8,9 +8,9 @@
 		</div>
 	</div>
 
-	<div class='row bg-danger' style='padding: 10px' ng-show='!platform.isJDUL() && isRegistrationWarningVisible()'>
+	<!-- <div class='row bg-danger' style='padding: 10px' ng-show='!platform.isJDUL() && isRegistrationWarningVisible()'>
 		<h4>Anmeldung ist ab Montag 19.02 00:00 für alle Programme möglich</h4>
-	</div>
+	</div> -->
 	<div ng-show="platform.isKiso() && isRegistrationWarningVisible()">
 		<div class="row">
 			<div class="col-sm-3">
